<resources>
    <string name="app_name">Fire Auth Log</string>
    <string name="title_activity_navigation_draw">Rotee</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inbox">Order Detail</string>
    <string name="menu_post">Recent Post</string>
    <string name="menu_purchased">Purchased</string>
    <string name="menu_sold">Sold</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="loginScreen">Login</string>

</resources>
